// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`copy adds hash to dest with hash: true 1`] = `
{
  "files1/test-file.js": {
    "dest": "build/static/test-file.b2c22cd6.js",
    "options": {
      "errorOnExist": true,
      "overwrite": true,
      "preserveTimestamps": true,
    },
  },
}
`;

exports[`copy copies directory of files 1`] = `
{
  "<PROJECT_ROOT>/files1/nested/nested-inside/inside.js": {
    "dest": "<PROJECT_ROOT>/build/static/nested/nested-inside/inside.js",
    "options": {
      "errorOnExist": false,
      "overwrite": false,
      "preserveTimestamps": false,
    },
  },
  "<PROJECT_ROOT>/files1/nested/other.js": {
    "dest": "<PROJECT_ROOT>/build/static/nested/other.js",
    "options": {
      "errorOnExist": false,
      "overwrite": false,
      "preserveTimestamps": false,
    },
  },
  "<PROJECT_ROOT>/files1/test-file.js": {
    "dest": "<PROJECT_ROOT>/build/static/test-file.js",
    "options": {
      "errorOnExist": false,
      "overwrite": false,
      "preserveTimestamps": false,
    },
  },
}
`;

exports[`copy copies directory of files with hashes 1`] = `
{
  "<PROJECT_ROOT>/files1/nested/nested-inside/inside.js": {
    "dest": "<PROJECT_ROOT>/build/static/nested/nested-inside/inside.f7d8aade.js",
    "options": {
      "errorOnExist": true,
      "overwrite": true,
      "preserveTimestamps": true,
    },
  },
  "<PROJECT_ROOT>/files1/nested/other.js": {
    "dest": "<PROJECT_ROOT>/build/static/nested/other.4a98043a.js",
    "options": {
      "errorOnExist": true,
      "overwrite": true,
      "preserveTimestamps": true,
    },
  },
  "<PROJECT_ROOT>/files1/test-file.js": {
    "dest": "<PROJECT_ROOT>/build/static/test-file.b2c22cd6.js",
    "options": {
      "errorOnExist": true,
      "overwrite": true,
      "preserveTimestamps": true,
    },
  },
}
`;

exports[`copy copies files 1`] = `
{
  "<PROJECT_ROOT>/files1/test-file.js": {
    "dest": "<PROJECT_ROOT>/build/static/test-file.js",
    "options": {
      "errorOnExist": true,
      "overwrite": true,
      "preserveTimestamps": true,
    },
  },
}
`;

exports[`copy passes options to fse.copy 1`] = `
{
  "files1/test-file.js": {
    "dest": "build/static/test-file.js",
    "options": {
      "errorOnExist": false,
      "overwrite": false,
      "preserveTimestamps": false,
    },
  },
}
`;
